apps/actual-budget/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  namespace: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: actual-budget
      port:
        name: http
  tls:
    - hosts: [budget]
